Simplify and harden agentic modeling workflows
Consolidate constraint authoring around one compiled source-edit workflow and remove redundant snippet tools.

Tighten semantic model diffs, XTF fixture generation, input validation, temporary-file handling, CI, and container execution.

Align the documented 38-tool API with runtime contracts and expand unit and end-to-end coverage.