@@ -5,9 +5,8 @@ import ch.so.agi.mcp.util.AnnotationRenderer;
 import ch.so.agi.mcp.util.NameValidator;
 import java.time.Clock;
 import java.time.LocalDate;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
+import java.net.URI;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -20,23 +19,14 @@ import org.springframework.stereotype.Component;
 @Component
 public class ModelTools {
 
-  private static final ZoneId ZURICH = ZoneId.of("Europe/Zurich");
   private static final String DEFAULT_ILI_VERSION = "2.4";
-  private static final DateTimeFormatter ISO_DAY = DateTimeFormatter.ISO_DATE;
-  private static final String SOLOTHURN_BANNER_TEMPLATE =
-      "/** !!------------------------------------------------------------------------------\n" +
-      " * !! Version    | wer | Änderung\n" +
-      " * !!------------------------------------------------------------------------------\n" +
-      " * !! %s | abr  | Initalversion\n" +
-      " * !!==============================================================================\n" +
-      " */\n";
 
   private final Clock clock;
   public ModelTools(Clock clock) { this.clock = clock; }
 
   @McpTool(
       name = "createModelSnippet",
-      description = "Erzeugt ein INTERLIS-2 Modellgerüst. Params: name (required), lang (default 'de'), version (default 'today'), uri (default 'https://example.org/<name>'), iliVersion (default '2.4'), includeSolothurnHeader (default false), imports (default []), iliDoc, metaAttributes."
+      description = "Erzeugt ein INTERLIS-2 Modellgerüst aus expliziten Metadaten. Params: name (required), lang (default 'de'), version (default 'today'), uri (default 'https://example.org/<name>'), iliVersion (default '2.4'), imports (default []), iliDoc, metaAttributes."
   )
   public Map<String, Object> createModelSnippet(
       @McpToolParam(description = "Modellname (Bezeichner ohne Leerzeichen)", required = true) String name,
@@ -45,7 +35,6 @@ public class ModelTools {
       @McpToolParam(description = "Version im Format YYYY-MM-DD", required = false) @Nullable String version,
       @McpToolParam(description = "INTERLIS Sprachversion (z. B. '2.3' oder '2.4')", required = false) @Nullable String iliVersion,
       @McpToolParam(description = "Zusätzliche Imports (z. B. 'GeometryCHLV95_V1')", required = false) @Nullable List<String> imports,
-      @McpToolParam(description = "Fügt einen Solothurn-Header oberhalb des Snippets ein", required = false) @Nullable Boolean includeSolothurnHeader,
       @McpToolParam(description = "IliDoc-Blockkommentar direkt vor dem MODEL", required = false) @Nullable String iliDoc,
       @McpToolParam(description = "INTERLIS-Metaattribute direkt vor dem MODEL", required = false) @Nullable List<MetaAttributeSpec> metaAttributes
   ) {
@@ -57,18 +46,44 @@ public class ModelTools {
     var nv = NameValidator.ascii();
     nv.validateIdent(modelName, "Model name");
 
-    List<String> trimmedImports = imports == null
-        ? List.of()
-        : imports.stream().map(String::trim).collect(Collectors.toList());
+    List<String> trimmedImports;
+    if (imports == null) {
+      trimmedImports = List.of();
+    } else {
+      if (imports.stream().anyMatch(model -> model == null || model.isBlank())) {
+        throw new IllegalArgumentException("Import model names must not be blank.");
+      }
+      trimmedImports = imports.stream().map(String::trim).toList();
+      if (new LinkedHashSet<>(trimmedImports).size() != trimmedImports.size()) {
+        throw new IllegalArgumentException("Duplicate model imports are not allowed.");
+      }
+    }
     for (String m : trimmedImports) {
       validateImportModelName(m);
     }
 
     String _lang = (lang == null || lang.isBlank()) ? "de" : lang.trim();
+    if (!_lang.matches("[a-z]{2}")) {
+      throw new IllegalArgumentException("lang must be a two-letter lowercase language code.");
+    }
     String _version = (version == null || version.isBlank()) ? LocalDate.now(clock).toString() : version.trim();
+    try {
+      LocalDate.parse(_version);
+    } catch (java.time.format.DateTimeParseException ex) {
+      throw new IllegalArgumentException("version must use ISO date format YYYY-MM-DD.");
+    }
     String _uri = (uri == null || uri.isBlank())
         ? ("https://example.org/" + modelName.toLowerCase(Locale.ROOT))
         : uri.trim();
+    URI parsedUri;
+    try {
+      parsedUri = URI.create(_uri);
+    } catch (IllegalArgumentException ex) {
+      throw new IllegalArgumentException("uri must be a valid absolute URI.");
+    }
+    if (!parsedUri.isAbsolute() || _uri.contains("\"") || _uri.contains("\n") || _uri.contains("\r")) {
+      throw new IllegalArgumentException("uri must be a valid absolute URI.");
+    }
     String _iliVersion = (iliVersion == null || iliVersion.isBlank()) ? DEFAULT_ILI_VERSION : iliVersion.trim();
     if (!"2.3".equals(_iliVersion) && !DEFAULT_ILI_VERSION.equals(_iliVersion)) {
       throw new IllegalArgumentException("iliVersion must be either '2.3' or '2.4'. Got: '" + _iliVersion + "'.");
@@ -77,13 +92,8 @@ public class ModelTools {
         .map(model -> "  IMPORTS " + model + ";\n")
         .collect(Collectors.joining());
 
-    String header = Boolean.TRUE.equals(includeSolothurnHeader) ? buildSolothurnBanner() : "";
-    List<MetaAttributeSpec> mergedMetaAttributes = Boolean.TRUE.equals(includeSolothurnHeader)
-        ? AnnotationRenderer.mergeMetaAttributes(defaultSolothurnMetaAttributes(), metaAttributes)
-        : AnnotationRenderer.mergeMetaAttributes(null, metaAttributes);
-    String modelAnnotations = AnnotationRenderer.renderAnnotations(iliDoc, mergedMetaAttributes);
-    String snippet = header +
-        String.format(
+    String modelAnnotations = AnnotationRenderer.renderAnnotations(iliDoc, metaAttributes);
+    String snippet = String.format(
             "INTERLIS %s;\n\n" +
             "%s" +
             "MODEL %s (%s) AT \"%s\" VERSION \"%s\" =\n" +
@@ -96,51 +106,10 @@ public class ModelTools {
     );
   }
 
-  @McpTool(
-      name = "createImportLine",
-      description = "Erzeugt eine einzelne IMPORTS-Zeile. Params: modelName (required), qualified (default true)."
-  )
-  public String createImportLine(
-      @McpToolParam(description = "Modellname (Bezeichner ohne Leerzeichen)", required = true) String modelName,
-      @McpToolParam(description = "Qualified import (default true)", required = false) @Nullable Boolean qualified
-  ) {
-    if (modelName == null || modelName.isBlank()) {
-      throw new IllegalArgumentException("Model name is required.");
-    }
-
-    String trimmedName = modelName.trim();
-    validateImportModelName(trimmedName);
-    String qualifier = Boolean.FALSE.equals(qualified) ? " UNQUALIFIED" : "";
-
-    return "IMPORTS" + qualifier + " " + trimmedName + ";";
-  }
-
   private void validateImportModelName(String modelName) {
     if (!"INTERLIS".equals(modelName)) {
       NameValidator.ascii().validateIdent(modelName, "Import model name");
     }
-  }
-
-  private String buildSolothurnBanner() {
-    String today = LocalDate.now(clock.withZone(ZURICH)).format(ISO_DAY);
-    return String.format(SOLOTHURN_BANNER_TEMPLATE, today);
-  }
-
-  private List<MetaAttributeSpec> defaultSolothurnMetaAttributes() {
-    List<MetaAttributeSpec> defaults = new ArrayList<>();
-    defaults.add(metaAttribute("technicalContact", null, "mailto:agi@bd.so.ch"));
-    defaults.add(metaAttribute("title", "a title", null));
-    defaults.add(metaAttribute("shortDescription", "a short description", null));
-    defaults.add(metaAttribute("tags", "de:Gebäude,fr:Bâtiment,fubar", null));
-    return defaults;
-  }
-
-  private MetaAttributeSpec metaAttribute(String name, @Nullable String value, @Nullable String rawValue) {
-    MetaAttributeSpec metaAttribute = new MetaAttributeSpec();
-    metaAttribute.setName(name);
-    metaAttribute.setValue(value);
-    metaAttribute.setRawValue(rawValue);
-    return metaAttribute;
   }
 
 }
